[package]
name = "fibheap"
version = "0.1.0"
authors = ["Alexander Lindermayr <alexander.lindermayr97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"