[package]
name = "fibheap"
version = "0.1.0"
authors = ["Alexander Lindermayr <alexander.lindermayr97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = "0.3"
rand = "0.8"
binary-heap-plus = "0.4.1"
compare = "0.1"

[[bench]]
name = "fibheap"
harness = false